feat(comment): apply format response
