# src/features/auth/entities/user.entity.ts
@@ -1,8 +1,0 @@
-export interface User {
-  _id: string;
-  name: string;
-  avatar?: string;
-  username: string;
-  password: string;
-  createdAt: Date;  
-}
