# src/features/auth/schemas/user.schema.ts
@@ -1,14 +1,21 @@
+import mongoose, { Document, Schema } from "mongoose";
 
-import { User } from '@src/features/auth/entities';
-import mongoose, { Document, Schema } from 'mongoose';
+export interface User {
+  _id: string;
+  name: string;
+  avatar?: string;
+  username: string;
+  password: string;
+  createdAt: Date;
+}
 
 export const userSchema = new Schema<User>({
   name: String,
   avatar: String,
   username: String,
   password: String,
-  createdAt: Date  
+  createdAt: Date,
 });
 
-const userModel = mongoose.model<User & Document>('user', userSchema);
+const userModel = mongoose.model<User & Document>("user", userSchema);
 export default userModel;
