# src/features/comments/comments.controller.ts
@@ -1,25 +1,39 @@
-import { RequestWithComment, RequestWithUser } from '@src/shared/interfaces/request';
-import isAuthenticated from '@src/shared/middlewares/auth.middleware';
-import isCommentAuthor from '@src/shared/middlewares/author.middleware';
-import validObjectId from '@src/shared/middlewares/object-id.middleware';
-import { Body, Controller, Delete, Get, Middlewares, Path, Post, Put, Request, Route, Security, Tags } from 'tsoa';
-import { injectable, registry } from 'tsyringe';
-import { CommentsService } from './comments.service';
-import { AddReactionDTO, CreateCommentDTO, UpdateCommentDTO } from './dtos';
-import commentModel, { Comment } from './shemas/comment.schema';
-
-
-@registry([ 
+import formattedResponse from "@src/shared/commons/response";
+import {
+  RequestWithComment,
+  RequestWithUser,
+} from "@src/shared/interfaces/request";
+import isAuthenticated from "@src/shared/middlewares/auth.middleware";
+import isCommentAuthor from "@src/shared/middlewares/author.middleware";
+import isValidId from "@src/shared/middlewares/object-id.middleware";
+import {
+  Body,
+  Controller,
+  Delete,
+  Get,
+  Middlewares,
+  Path,
+  Post,
+  Put,
+  Request,
+  Route,
+  Security,
+  Tags,
+} from "tsoa";
+import { injectable, registry } from "tsyringe";
+import { CommentsService } from "./comments.service";
+import { AddReactionDTO, CreateCommentDTO, UpdateCommentDTO } from "./dtos";
+import commentModel, { Comment } from "./shemas/comment.schema";
+@registry([
   {
-    token: 'COMMENT',
-    useFactory: () => commentModel
-  }
+    token: "COMMENT",
+    useFactory: () => commentModel,
+  },
 ])
-
-@Tags('comments')
-@Route('comments')
+@Tags("comments")
+@Route("comments")
+@Security("jwt")
 @Middlewares(isAuthenticated)
-@Security('jwt')
 @injectable()
 export class CommentsController extends Controller {
   constructor(private readonly commentService: CommentsService) {
@@ -27,8 +41,9 @@ export class CommentsController extends Controller {
   }
 
   @Get()
-  getAll() {
-    return this.commentService.findAll();
+  async getAll() {
+    const data = await this.commentService.findAll();
+    return formattedResponse({ data });
   }
 
   @Post()
@@ -42,42 +57,48 @@ export class CommentsController extends Controller {
       comment: payload.comment,
       createdAt: new Date(),
       updatedAt: null,
-      reactions: []
+      reactions: [],
     };
-    return this.commentService.create(comment);
+
+    const data = await this.commentService.create(comment);
+    return formattedResponse({ data, message: "comment created successfully" });
   }
 
-  @Put('{id}')
-  @Middlewares(validObjectId)
-  @Middlewares(isCommentAuthor)
+  @Put("{id}")
+  @Middlewares([isValidId, isCommentAuthor])
   async update(
     @Path() id: string,
     @Body() payload: UpdateCommentDTO,
     @Request() request: RequestWithComment
   ) {
-    const comment = {
+    const comment: Comment = {
       ...request.comment,
-      comment: payload.comment
+      comment: payload.comment,
     };
 
-    return this.commentService.update(comment);
+    await this.commentService.update(comment);
+    return formattedResponse({
+      data: comment,
+      message: "comment updated successfully",
+    });
   }
 
-  @Delete('{id}')
-  @Middlewares(validObjectId)
-  @Middlewares(isCommentAuthor)
+  @Delete("{id}")
+  @Middlewares([isValidId, isCommentAuthor])
   async delete(@Path() id: string, @Request() request: RequestWithComment) {
     const comment = request.comment;
-    return this.commentService.remove(comment);
+    const data = await this.commentService.remove(comment);
+    return formattedResponse({ data, message: "comment deleted successfully" });
   }
 
-  @Post('{id}/react')
-  @Middlewares(validObjectId)
+  @Post("{id}/react")
+  @Middlewares(isValidId)
   async addReaction(
     @Path() id: string,
     @Body() payload: AddReactionDTO,
     @Request() request: RequestWithUser
   ) {
-    return this.commentService.addReaction(id, payload.type, request.user);
+    await this.commentService.addReaction(id, payload.type, request.user);
+    return formattedResponse({ message: "reaction created successfully" });
   }
 }
